--- a/css/screen.scss
+++ b/css/screen.scss
@@ -35,6 +35,12 @@ header {
 
 .logo {
 	width: 60%;
+	height: 5em;
+}
+
+.logo img {
+	width:100px;
+	margin-top: 15px;
 }
 
 /*****NAV STYLES*******/
