--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: [name]
 Theme URI: http://[name].com
-Author: Rocket Pop Media Design & Development Team
+Author: Scott Murphy (Murph) @ Rocket Pop Media
 Author URI: http://rocketpopmedia.com/
 Description: [description]
 Version: 1.0
