--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -21,7 +21,7 @@ body {
 		line-height: 2.4em;
 }
 #pg-container {
-	padding: 1em;
+	padding: 0 1em;
 	header {
 		line-height: 5em;
 		text-align: center;
